<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Layout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

	<string name="number0_buttons">0</string>
    <string name="number1_buttons">1</string>
    <string name="number2_buttons">2</string>
    <string name="number3_buttons">3</string>
    <string name="number4_buttons">4</string>
    <string name="number5_buttons">5</string>
    <string name="number6_buttons">6</string>
    <string name="number7_buttons">7</string>
    <string name="number8_buttons">8</string>
    <string name="number9_buttons">9</string>
    <string name="dot_button">.</string>
    <string name="equal_button">=</string>
    <string name="add_button">+</string>
    <string name="minus_button">-</string>
    <string name="multiply_button">*</string>
    <string name="divide_button">÷</string>
    
    
</resources>
