<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dorian.layout.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="56dp" >

        <GridLayout
            android:id="@+id/gridLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            android:columnCount="3"
            android:rowCount="4" >

            <Button
                android:id="@+id/Button01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/number1_buttons" />

            <Button
                android:id="@+id/Button02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/number2_buttons" />

            <Button
                android:id="@+id/Button04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:text="@string/number4_buttons" />

            <Button
                android:id="@+id/Button03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:height="50dp"
                android:text="@string/number3_buttons"
                android:width="50dp" />

            <Button
                android:id="@+id/Button07"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="2"
                android:text="@string/number7_buttons" />

            <Button
                android:id="@+id/Button05"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:text="@string/number5_buttons" />

            <Button
                android:id="@+id/Button06"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:text="@string/number6_buttons" />

            <Button
                android:id="@+id/Button08"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_gravity="left|top"
                android:layout_row="2"
                android:text="@string/number8_buttons" />

            <Button
                android:id="@+id/Button09"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_gravity="left|top"
                android:layout_row="2"
                android:text="@string/number9_buttons" />

            <Button
                android:id="@+id/Button00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="3"
                android:text="@string/number0_buttons" />

            <Button
                android:id="@+id/ButtonDot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_gravity="left|top"
                android:layout_row="3"
                android:text="@string/dot_button" />

            <Button
                android:id="@+id/ButtonEqual"
                android:layout_width="match_parent"
                android:layout_column="2"
                android:layout_gravity="left|top"
                android:layout_row="3"
                android:text="@string/equal_button" />
        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button" />

            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_button" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiply_button" />

            <Button
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide_button" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>